corrected id value

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 		</div>
 
 		<div class="example">
-			<label for="required">Required Select</label>
-			<select id="required" type="text" data-validation='{"rules":["required"],"messages":["Please fill this in"]}'>
+			<label for="required-select">Required Select</label>
+			<select id="required-select" type="text" data-validation='{"rules":["required"],"messages":["Please fill this in"]}'>
 				<option>Select an option</option>
 				<option value="selected">Selected</option>
 			</select>
