--- a/index.html
+++ b/index.html
@@ -197,7 +197,8 @@
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="js/jquery-1.8.3.min.js">\x3C/script>')</script>
 
-	<script src="js/looseValidation.js"></script>
+	<script src="js/reporter.looseValidation.js"></script>
+	<script src="js/validator.looseValidation.js"></script>
 
 	<script>
 		$(document).ready(function() {
