--- a/tests/test-runner.html
+++ b/tests/test-runner.html
@@ -82,7 +82,8 @@
     <script src="../js/jquery-1.8.3.min.js"></script>
 
     <!-- Source files -->
-    <script src="../js/looseValidation.js"></script>
+    <script src="../js/reporter.looseValidation.js"></script>
+    <script src="../js/validator.looseValidation.js"></script>
 
     <!-- Test -->
     <script src="models/looseValidation.test.js"></script>
