--- a/tests/test-runner.html
+++ b/tests/test-runner.html
@@ -46,9 +46,9 @@
     </fieldset>
     <br /><br />
     <fieldset>
-        <legend>looseValidation form fields</legend>
+        <legend>daftValidation form fields</legend>
 
-        <form action="#" class="looseValidation">
+        <form action="#" class="daftValidation">
             <div class="example">
                 <label for="required">Required</label>
                 <input id="required" type="text" 
@@ -82,11 +82,11 @@
     <script src="../js/jquery-1.8.3.min.js"></script>
 
     <!-- Source files -->
-    <script src="../js/reporter.looseValidation.js"></script>
-    <script src="../js/validator.looseValidation.js"></script>
+    <script src="../js/reporter.daftValidation.js"></script>
+    <script src="../js/validator.daftValidation.js"></script>
 
     <!-- Test -->
-    <script src="models/looseValidation.test.js"></script>
+    <script src="models/daftValidation.test.js"></script>
 
     <script>
         mocha.run();
